# computacionParalelayDistribuida

./: .gitignore  README.md
matrices/: VerificarMultiplicacion.m  matrices.txt  multiplicarMatricesConHilos.c  multiplicarMatricesSec.c  multiplicarMatricesSec2.c
pi/: calPI.cpp  calPI3.cpp  mpi-hosts
sehernandezce-lumendezm/: CMakeLists.txt  LEEME.md  video_reduccion_paralelo.c  video_reduccion_secuencial.c
sehernandezce-lumendezm/others/: clear_media.sh  script_ejecutar_todo_win.py
sehernandezce-lumendezm/src/: resultados.txt  script_colab_ejecutar_todo_linux.sh  script_ejecutar_todo_linux.sh  script_ejecutar_todo_win.py  video_reduccion_paralelo.cpp  video_reduccion_paralelo_openmpi.cpp  video_reduccion_parallelo_openmpi.cpp  video_reduccion_secuencial.cpp  video_reduction_cuda.cu
